# RatingExchangeBot-Rust

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yaml
.sqlx/: query-1066c97443b7dde302a51bbbcab83294ff3b3cb6f99b9181904e3611ee349d28.json  query-265a6782e84ea1e0a98902e33e095fd31c85ad1c7e7e74561f6e447017871f30.json  query-27203d2dc9cc58f1d7ca2eaf604733fcd9eb0b80f878782993a3b68d6e61354e.json  query-2b74db17a4e62683d169b9408ea1e17e804eb43232e32d05fe3d409d3d8d7623.json  query-2ff4a12c6051a048ed72e8fc212917dd64b49632becf76d44898af69eab80d4c.json  query-3b70e5c50bf9706cf606dd6a14fb6b5dd1d9a166f03c83898ba08ba68295cbba.json  query-4bb3729973870df453977d8ded950e66e5623dfad7ea6eb47e0b005b77cc8b87.json  query-640bd22c1014296e3d06b569dd9123cf2f413101e2d68a70d5577cd7d3cb6d0f.json  query-7631e444e7cc9ae992feeacd1d63b5ac0f2fac03f774555edeed4f9012bb6c75.json  query-77199caac635970c7534713f0ea0a1e14480c7608ce5f343693f374ac445d539.json  query-77baee050be71c4f31dcc34c9422f0f523f21303c07628ca79ff389c425f1180.json  query-832eede60674455ca5e96b3ec745f171c169af25e377490a072335f007f6a97f.json  query-b68a0f1106a89569aaab20e7b0dff0d1fde06367a2492281d21172ac11d91059.json  query-ee109192c5f301b1643c42efaa7fe207f95cf1f00249c9737c5e5fd7b4718489.json  query-ee81df0aa0162ca9d2a159ee2e1949c611c5bcb6b01cabc8c97063995f5a213f.json
locales/: en.yml
migrations/: 20230403154352_init.sql
src/: actors.rs  assignment_service.rs  env_vars.rs  main.rs  poise_error_handler.rs
src/commands/: admin.rs  camel_slug.rs  exchange.rs  mod.rs  played.rs  revoke.rs  submit.rs  user.rs
src/commands/arguments/: exchange_slug.rs  human_datetime.rs  human_duration.rs  mod.rs  trimmed_string.rs
src/commands/exchange/: create.rs  delete.rs  list.rs  mod.rs
src/data/: exchange.rs  exchange_round.rs  mod.rs  played_game.rs  submission.rs
src/data/types/: mod.rs  sqlx_types.rs  utc_datetime.rs
src/jam_types/: mod.rs
src/models/: exchange.rs  mod.rs  played_game.rs  submission.rs
src/models/types/: mod.rs  sqlx_types.rs  utc_datetime.rs
src/repository/: conversion.rs  exchange_repository.rs  mod.rs  played_game_repository.rs  submission_repository.rs
src/solver/: dinic.rs  flow_network.rs  mod.rs
src/storage/: exchange_storage.rs  mod.rs
src/utils/: assignment_network.rs  discord_timestamp.rs  formatting.rs  mod.rs
