[package]
name = "rating-exchange-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
envmnt = "0.10.4"
anyhow = "1.0.70"
thiserror = "1.0.40"
async-trait = "0.1.68"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
sentry = { version = "0.31.6", features = [ "anyhow" ] }
sentry-tracing = "0.31.6"

time = "0.3.20"
regex = "1.7.3"
lazy-regex = "2.5.0"
deunicode = "1.3.3"
strum = "0.25.0"

tokio = "1.27.0"

sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "time", "macros"] }

serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "model", "native_tls_backend", "cache"] }
poise = "0.5.2"

[dev-dependencies]
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
map-macro = "0.2.5"

[profile.dev.package.sqlx-macros]
opt-level = 3
