[package]
name = "rating-exchange-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.70"
thiserror = "1.0.40"
async-trait = "0.1.68"
dotenvy = "0.15.7"
envy = "0.4.2"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

time = "0.3.20"
regex = "1.7.3"
lazy-regex = "3.1.0"
deunicode = "1.3.3"
strum = { version = "0.26.3", features = ["derive"] }
bimap = "0.6.3"

tokio = { version = "1.27.0", features = ["rt-multi-thread", "signal"] }

sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "time", "macros"] }

serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "model", "native_tls_backend", "cache"] }
poise = "0.6.1"

indoc = "2.0.5"

[dev-dependencies]
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
map-macro = "0.3.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
